# abol-tokenizer

./: .dockerignore  .env.example  .gitignore  ALGORITHMS.md  Dockerfile  ahun_corpus.txt  app.py  docker-compose.yml  evaluate.py  maps.json  ppl_curve.json  ppl_curve.py  pyproject.toml  requirements_api.txt  train_decomposed_tokenizer.py  train_hybrid_tokenizer.py
Dataset/: additional_corpus.txt  training_corpus.txt
amharic_tokenizer/: __init__.py  automata.py  cli.py  decomposed_tokenizer.py  fidel_decomposer.py  hybrid_tokenizer.py  maps.py  morphological_tokenizer.py  tokenizer.py  utils.py
amharic_tokenizer/.ipynb_checkpoints/: __init__-checkpoint.py
model_dir/: glyph_to_key.json  key_to_glyph.json  tokenizer.json  vocab.json
model_morphological/: tokenizer.json  vocab.json
model_with_sqlite_data/: glyph_to_key.json  key_to_glyph.json  tokenizer.json  vocab.json
static/: index.html
tests/: test_tokenizer.py
